# teleprompter

./: BionicWidget.cpp  BionicWidget.hpp  CMakeLists.txt  IndexWidget.cpp  IndexWidget.hpp  MainWindow.cpp  MainWindow.hpp  README.md  TextReaderWidget.cpp  TextReaderWidget.hpp  main.cpp
config/: build.cmake
include/: BionicWidget.hpp  ChronometerWidget.hpp  CreditsDialog.hpp  FileWidget.hpp  FontBarWidget.hpp  MainWindow.hpp  TextReaderWidget.hpp  Version.hpp.in  VersionWidget.hpp
resources/: resources.qrc  styles.qss
resources/app-icons/: teleprompter.icns
src/: BionicWidget.cpp  ChronometerWidget.cpp  CreditsDialog.cpp  FileWidget.cpp  FontBarWidget.cpp  MainWindow.cpp  TextReaderWidget.cpp  VersionWidget.cpp  main.cpp
